--- a/.github/workflows/login_check.yml
+++ b/.github/workflows/login_check.yml
@@ -32,7 +32,7 @@ jobs:
           SEARCADE_ACCOUNTS: ${{ secrets.SEARCADE_ACCOUNTS }}
           TEL_TOK: ${{ secrets.TEL_TOK }}
           TEL_ID: ${{ secrets.TEL_ID }}
-        run: python searcode_login.py
+        run: python searcade_login.py
         # 即使这里报错，也继续执行后续步骤，以便上传截图
         continue-on-error: true
 
